# brain-db

./: .dockerignore  .gitignore  AUTONOMY.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  RELEASE-NOTES-v1.0.0.md  ROADMAP.md  USAGE.md  docker-compose.yml  justfile  rustfmt.toml
crates/brain-cli/: Cargo.toml
crates/brain-cli/src/: main.rs
crates/brain-cli/src/cli/: args.rs
crates/brain-cli/src/commands/: health.rs  mod.rs  rebuild.rs  stats.rs
crates/brain-cli/src/output/: mod.rs
crates/brain-cli/tests/: diagnostics.rs  rebuild.rs  shard.rs
crates/brain-core/: Cargo.toml  README.md
crates/brain-core/src/: edge.rs  edge_kind_ref.rs  error.rs  ids.rs  lib.rs  memory.rs  node.rs  worker_state.rs
crates/brain-core/src/knowledge/: confidence.rs  entity.rs  ids.rs  kinds.rs  mod.rs  relation.rs  resolver.rs  statement.rs
crates/brain-core/src/nodes/: kinds.rs  mod.rs  relation.rs  statement.rs
crates/brain-core/src/resolution/: confidence.rs  mod.rs  referential.rs  trigrams.rs
crates/brain-core/tests/: smoke.rs
crates/brain-embed/: Cargo.toml  README.md
crates/brain-embed/src/: cache.rs  error.rs  fingerprint.rs  forward.rs  lib.rs
crates/brain-embed/src/dispatcher/: cpu.rs
crates/brain-embed/src/model/: load.rs  tokenize.rs
crates/brain-explore/: Cargo.toml
crates/brain-explore/src/: lib.rs
crates/brain-explore/src/format/: mod.rs  output_format.rs  (+1 more)
crates/brain-explore/tests/: encode_scenarios.rs
crates/brain-index/: Cargo.toml  README.md
crates/brain-index/benches/: lexical_retrieve.rs  lock_free_read_stall.rs
crates/brain-index/src/: arena_reader.rs  entity_hnsw.rs  graph_retriever.rs  hnsw.rs  hype_hnsw.rs  idmap.rs  lib.rs  params.rs  persistence.rs  pq_hnsw.rs  pq_shared.rs  rebuild.rs  semantic_retriever.rs  shared.rs  statement_hnsw.rs  statement_question_hnsw.rs  tombstones.rs
crates/brain-metadata/: Cargo.toml  README.md
crates/brain-metadata/benches/: entity_resolve.rs  relation_ops.rs  statement_ops.rs
crates/brain-metadata/examples/: dump_corpus.rs
crates/brain-metadata/src/: audit_ops.rs  cascade.rs  cascade_ops.rs  db.rs  entity_merge_ops.rs  entity_ops.rs  entity_type_ops.rs  extractor_ops.rs  lib.rs  llm_cache.rs  predicate_ops.rs  relation_ops.rs  relation_traversal.rs  relation_type_ops.rs  schema.rs  schema_apply.rs  schema_store.rs  sink.rs  statement_ops.rs  sweeper_ops.rs  trigram_ops.rs
crates/brain-metadata/tests/: edge_concurrent.rs  predicate_edge_cases.rs  predicate_property.proptest-regressions  predicate_property.rs  recovery_chaos.rs  recovery_integration.rs  relation_type_edge_cases.rs  schema_apply_chaos.rs  schema_strict_migration.rs  statement_property.proptest-regressions  statement_property.rs
crates/brain-ops/: Cargo.toml  README.md
crates/brain-ops/src/: context.rs  dispatch.rs  encode.rs  error.rs  forget.rs  grounded.rs  idempotency.rs  lib.rs  link.rs  plan.rs  reason.rs  recall.rs  schema_gate.rs  subscribe.rs  test_support.rs  txn.rs  txn_lens.rs  worker_metrics.rs  writer.rs
crates/brain-ops/tests/: correctness.rs  encode.rs  encode_vector_direct.rs  forget.rs  link.rs  plan.rs  reason.rs  recall.rs  relation_cardinality_race.rs  schema_vs_statement_race.rs  subscribe.rs  txn.rs  wal_order.rs  writer.rs
crates/brain-sdk-rust/: Cargo.toml
crates/brain-sdk-rust/examples/: store_and_recall.rs
crates/brain-sdk-rust/src/: lib.rs
crates/brain-sdk-rust/tests/: error_mapping.rs  handshake.rs  knowledge_entity.rs  knowledge_query.rs  knowledge_relation.rs  knowledge_schema.rs  knowledge_statement.rs  observability.rs  ops_encode.rs  ops_forget.rs  ops_link_unlink.rs  ops_procedural.rs  ops_recall.rs  ops_recall_stream.rs  ops_subscribe_stream.rs  ops_txn.rs  pool.rs
crates/brain-server/: Cargo.toml  README.md
crates/brain-server/src/: config.rs  connection.rs  dispatch.rs  main.rs  routing.rs  shard.rs
crates/brain-server/tests/: admin.rs  agent_isolation.rs  alerts.rs  cli_e2e.rs  config.rs  connection.rs  corpus_write_read_accuracy.rs  dispatch.rs  e2e.rs  embedder_encode.rs  embedder_startup.rs  extract_backfill.rs  extractor_pipeline.rs  extractors_phase_exit.rs  forget_cascade.rs  graceful_shutdown_durability.rs  knowledge_compat.rs  knowledge_entities_phase_exit.rs  knowledge_entity_merge_wire.rs  knowledge_entity_wire.rs  knowledge_extractor_wire.rs  knowledge_extractors_phase_exit.rs  knowledge_hybrid_phase_exit.rs  knowledge_lexical_phase_exit.rs  knowledge_llm_extractor_wire.rs  knowledge_query_wire.rs  knowledge_relation_wire.rs  knowledge_relations_phase_exit.rs  knowledge_schema_phase_exit.rs  knowledge_schema_wire.rs  knowledge_statement_wire.rs  knowledge_statements_phase_exit.rs  lexical_phase_exit.rs  opaque_body_compat.rs  query_wire.rs  recall_chaos.rs  recall_concurrent.rs  recall_hybrid_routing.rs  recall_perf.rs  recall_routing.rs  (+7 more)
crates/brain-shell/: Cargo.toml
crates/brain-shell/src/: connection.rs  lib.rs  main.rs
crates/brain-shell/tests/: encode_args.rs  entity_show_renders.rs  help_drift.rs  output_format.rs  parser.rs  session.rs  sticky_agent.rs  term_primitives.rs
crates/brain-workers/: Cargo.toml  README.md
crates/brain-workers/src/: cache_evict.rs  config.rs  env.rs  hnsw_maint.rs  lib.rs  scheduler.rs  snapshot.rs  wal_retention.rs  worker.rs
crates/brain-workers/tests/: access_boost.rs  ambiguity_resolver.rs  auto_edge.rs  auto_edge_metrics.rs  auto_edge_property.proptest-regressions  auto_edge_property.rs  auto_edge_real.rs  cache_evict.rs  causal_edge.rs  consolidation.rs  counter_reconcile.rs  decay.rs  edge_scrub.rs  extractor.rs  extractor_audit_invariant.rs  extractor_chaos.rs  extractor_concurrent.rs  extractor_edge_cases.rs  extractor_metrics.rs  extractor_property.rs  extractor_publish.rs  forget_cascade_statements.rs  hnsw_maint.rs  idempotency_cleanup.rs  no_regression.rs  scheduler.rs  schema_flag_sweep.rs  slot_reclaim.rs  snapshot.rs  statement_reclaim.rs  statistics.rs  temporal_edge.rs  wal_retention.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: protocol_frame.rs
(+1293 files in other folders)
