[package]
name = "brain-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
brain-protocol = { path = "../crates/brain-protocol" }

[[bin]]
name = "protocol_frame"
path = "fuzz_targets/protocol_frame.rs"
test = false
doc = false
bench = false

# Fuzz targets are built outside the workspace.
[workspace]
