[package]
name = "brain-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Admin CLI for the Brain cognitive substrate."

[[bin]]
name = "brain-cli"
path = "src/main.rs"

[dependencies]
brain-core = { path = "../brain-core" }
brain-sdk-rust = { path = "../brain-sdk-rust" }

anyhow.workspace = true
