[package]
name = "brain-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Admin CLI for the Brain cognitive substrate."

[lib]
name = "brain_cli"
path = "src/lib.rs"

[[bin]]
name = "brain-cli"
path = "src/main.rs"

[dependencies]
brain-core = { path = "../brain-core" }
brain-sdk-rust = { path = "../brain-sdk-rust" }
# Shared rendering layer. default-features = false drops the (future) tui
# feature so the admin CLI stays free of the ratatui-full compile cost.
brain-explore = { path = "../brain-explore", default-features = false }

anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
# Mock HTTP server for the integration tests.
tokio = { workspace = true, features = ["net", "io-util", "macros", "rt-multi-thread"] }
tempfile.workspace = true
