[package]
name = "brain-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared types for the Brain cognitive substrate."

[dependencies]
thiserror.workspace = true
uuid.workspace = true
serde.workspace = true

[dev-dependencies]
proptest.workspace = true
