[package]
name = "brain-embed"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Built-in embedding service (BGE-small) for Brain."

[dependencies]
brain-core = { path = "../brain-core" }
thiserror.workspace = true
