[package]
name = "brain-metadata"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Metadata store (redb) and graph storage for Brain."

[dependencies]
brain-core = { path = "../brain-core" }
thiserror.workspace = true
