[package]
name = "brain-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "The Brain cognitive substrate server."

[[bin]]
name = "brain-server"
path = "src/main.rs"

[dependencies]
# Brain crate dependencies are added in later Phase 9 sub-tasks as each one
# is wired in (e.g. 9.3 routing → brain-protocol; 9.4 shards → brain-storage;
# 9.5 metadata → brain-metadata, ...). Keeping the import set minimal here so
# this crate compiles on non-Linux hosts during 9.1 (config-only work).

anyhow.workspace = true
serde.workspace = true
thiserror.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tempfile.workspace = true
