[package]
name = "brain-shell"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Interactive shell for Brain — psql / redis-cli equivalent over the wire protocol."

[lib]
name = "brain_shell"
path = "src/lib.rs"

[[bin]]
name = "brain"
path = "src/main.rs"

[dependencies]
brain-core = { path = "../brain-core" }
brain-protocol = { path = "../brain-protocol" }
brain-sdk-rust = { path = "../brain-sdk-rust" }

# CLI / REPL stack — see workspace Cargo.toml for the rationale.
clap = { workspace = true }
clap_complete = { workspace = true }
rustyline = { workspace = true }
dirs = { workspace = true }

# Runtime + JSON output mode.
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "signal", "time", "io-util"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
toml = { workspace = true }
tempfile = { workspace = true }
time = { workspace = true }
futures-lite = { workspace = true }

# Terminal rendering. Comfy_table handles per-cell wrap, multi-line
# cells, terminal-width auto-fit, color, alignment, borders.
# terminal_size detects width when $COLUMNS is unset; owo_colors emits
# ANSI sequences with a build-time opt-out. termtree renders ASCII
# trees for entity neighborhoods. supports_hyperlinks gates OSC 8
# emission so unsupported terminals never see the escape codes.
comfy-table = "7"
terminal_size = "0.4"
owo-colors = "4"
termtree = "0.5"
supports-hyperlinks = "3"

[dev-dependencies]
tempfile = { workspace = true }
