[package]
name = "brain-workers"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Background workers for Brain (decay, consolidation, GC, etc.)."

[dependencies]
brain-core = { path = "../brain-core" }
thiserror.workspace = true
